traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:24: error: not found: value ligne2
    else if (x ==0 && ligne2 ==1) {
                      ^